test classes and gui compelted